# esdm

./: .atom-build.json  .clang-format  .clang_complete  .gitignore  .gitmodules  .travis-spack.yml  .travis.yml  CMakeLists.txt  README.md  compile.sh  configure
src/: CMakeLists.txt  configure  esdm-attributes.c  esdm-config.c  esdm-datatypes.c  esdm-grid.c  esdm-layout.c  esdm-modules.c  esdm-performancemodel.c  esdm-scheduler.c  esdm-siteconfig.c  esdm-siteconfiguration.c  esdm-stream.c  esdm.c  estream.c  fragments.c  hypercube-neighbour-manager.c  hypercube.c  m-attribute.c  m-dataset.c  m-datatype.c  m-dummy.c  m-file.c  m-group.c  m-link.c  m-object.c  memvol.c  neighbour-fragments.c  performance.c  regular-fragments.c
src/backends-data/: CMakeLists.txt  init.c
src/backends-data/Clovis/: .clovis.c.swp  CMakeLists.txt  Makefile  Makefile.bak  README.txt  clovis.c  clovis.h  clovis_internal.h
src/backends-data/Clovis/test/: CMakeLists.txt  test.c
src/backends-data/Motr/: CMakeLists.txt  Makefile.bak  README.txt  client.c  clovis.c  clovis.h  clovis_internal.h
src/backends-data/Motr/test/: CMakeLists.txt  test.c
src/backends-data/POSIX/: .posix.c.swo  .posix.c.swp  CMakeLists.txt  posix.c  posix.h
src/backends-data/POSIX/test/: generic.c
src/backends-data/WOS/: CMakeLists.txt  wos.c  wos.h
src/backends-data/WOS/test/: test.c
src/backends-data/WOS/wrapper/: CMakeLists.txt  wos_error.h  wos_wrapper.cpp  wos_wrapper.h
src/backends-data/datadummy/: CMakeLists.txt  datadummy.c  datadummy.h
src/backends-data/dummy/: CMakeLists.txt  dummy.c  dummy.h
src/backends-data/dynamic-perf-model/: lat-thr.c  lat-thr.h
src/backends-data/generic-perf-model/: lat-thr.c  lat-thr.h
src/backends-data/ime/: CMakeLists.txt  ime.c  ime.h
src/backends-data/kdsa/: CMakeLists.txt  esdm-kdsa.c  esdm-kdsa.h  kdsa.c
src/backends-data/kdsa/dummy/: kdsa-dummy.c  kdsa.h
src/backends-data/pmem/: CMakeLists.txt  esdm-pmem.c  esdm-pmem.h
src/backends-data/posix/: CMakeLists.txt  posix.c  posix.h
src/backends-data/posix/test/: CMakeLists.txt  stream.c
src/backends-data/posixi/: CMakeLists.txt  posixi.c  posixi.h
src/backends-data/posixi/test/: streami.c
src/backends-data/s3/: CMakeLists.txt  s3.c  s3.h
src/backends-metadata/: CMakeLists.txt
src/backends-metadata/MongoDB/: CMakeLists.txt  README  hello_mongoc.c
src/backends-metadata/metadummy/: CMakeLists.txt  metadummy.c  metadummy.h
src/backends-metadata/metadummy/test/: metatest.c
src/backends-metadata/mongodb/: CMakeLists.txt  mongodb.c  mongodb.h
src/backends-metadata/posix/: CMakeLists.txt  md-posix.c  md-posix.h
src/backends-metadata/posix/test/: CMakeLists.txt  metatest.c
src/data-backends/: CMakeLists.txt
src/data-backends/Clovis/: Makefile  clovis.c  clovis.h
src/data-backends/Clovis/test/: test.c
src/data-backends/POSIX/: posix.c  posix.h
src/data-backends/WOS/: wos.c  wos.h
src/data-backends/test/: generic-backend.c  generic-backend.h
src/hdf5-interface/: CMakeLists.txt  h5-esdm-callbacks.c  h5-esdm.c  h5-esdm.h
src/hdf5-interface-prototype/: m-dummy.c
src/hdf5-interface-prototype/hdf5-vol-sqlite-old/: compile_mistral.sh  db_postgresql.c  db_sqlite.c  h5_sqlite_plugin.c  h5_sqlite_plugin.h
src/hdf5-interface-prototype/include/: memvol-internal.h
src/hdf5-interface-prototype/test/: direct-datatype.c  direct-group.c  plugin-load.c
src/hdf5-interface-prototype/tools/: netcdf-bench.c
src/hdf5-interface/hdf5-vol-sqlite-old/: H5VL.c  debug.h
src/hdf5-interface/test/: CMakeLists.txt  H5A-Attribute-Interface.c  H5D-Dataset-Interface.c  H5F-File-Interface.c  H5F.c  H5G-Group-Interface.c  H5L-Link-Interface.c  H5O-Object-Interface.c  H5T-Datatype-Interface.c  env.bash
src/hdf5-interface/tools/: CMakeLists.txt
src/include/: debug.h  esdm-data-backend.h  esdm-datatypes-internal.h  esdm-datatypes.h  esdm-debug.h  esdm-grid.h  esdm-internal.h  esdm-metadata-backend.h  esdm-mpi-internal.h  esdm-mpi.h  esdm-stream.h  esdm-utils.h  esdm.h  memvol-internal.h  memvol.h  memvol.h.gch
src/interfaces/: CMakeLists.txt
src/interfaces/hdf5/: h5-esdm-callbacks.c  h5-esdm.c  h5-esdm.h
src/interfaces/hdf5-interface-prototype/: m-attribute.c  m-dataset.c  m-datatype.c  m-dummy.c  m-file.c  m-group.c  m-link.c  m-object.c  memvol.c
src/interfaces/hdf5-interface-prototype/hdf5-vol-sqlite-old/: H5VL.c  base.c  base.h  db_iface.h  db_postgresql.c  db_sqlite.c  debug.h  esdm.c  esdm.h  h5_sqlite_plugin.c  h5_sqlite_plugin.h
src/interfaces/hdf5-interface-prototype/include/: memvol-internal.h  memvol.h
src/interfaces/hdf5-interface-prototype/test/: direct-datatype.c  direct-group.c  plugin-dataset.c  plugin-file.c  plugin-group.c  plugin-load.c  simple.c  testfile.nc
src/interfaces/mpi/: CMakeLists.txt  esdm-mpi.c
src/interfaces/netcdf/: CMakeLists.txt  README  fetch-netcdf-examples-from-source.sh
src/test/: .benchmark.c.swp  CMakeLists.txt  _esdm-clovis.conf  _esdm-mixed.conf  _esdm-posix.conf  _esdm-withmd.conf  _esdm-wos.conf  _esdm.conf  a-many-dims-stress-test.c  a-many-fragments-stress-test.c  a-writeback-benchmark.c  attributes.c  benchmark.c  benchmark.c.olga  data-conversion.c  data-copy-benchmark.c  datatype-serializer.c  datatype.c  direct-group.c  esdm-mixed.conf  esdm-motr.conf  esdm-posix.conf  esdm-wos.conf  esdm.conf  esdm_ime.conf  fill-value.c  fragment-selection-benchmark.c  fragmentation-method.c  grid.c  group.c  hdf5-example.c  hypercube.c  incomplete-copy.c  init.c  metadata.c  metadata_nc.c  plugin-dataset.c  plugin-file.c  plugin-group.c  plugin-load.c  (+15 more)
src/test/readwrite-examples/: .gitignore  README.md  climate-analysis-40-read1  climate-analysis-40-read2  climate-analysis-40-read3  climate-analysis-40-write  satellite-path-generator.c  satellite-path-write
src/test/util/: test_util.c  test_util.h
src/tools/: CMakeLists.txt  esdm-chmod.c  esdm-ls.c  esdm-rm.c  esdm-stat.c  mkfs.esdm.c  netcdf-bench-normal.c  netcdf-bench.c  option.c  option.h  tool-util.c  tool-util.h
src/utils/: auxiliary.c  cf-convention.c  debug.c  json.c  parameters.c
test/: s3.sh  (+1 more)
(+215 files in other folders)
